TBCM-52 - resolved search input field filter of occupations data. Also fixed styling issue in Activities Gap table body.

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -116,7 +116,6 @@ thead th:first-child {
 
 tbody {
   overflow: scroll;
-  height: 200px;
 }
 
 /* MAKE LEFT COLUMN FIXED */
